# inferops-env

./: .gitignore  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf-space.yml
inferops_env/: __init__.py  environment.py  grader.py  models.py
inferops_env/tasks/: easy_batch_01.json  hard_misleading_restart_signal_01.json  hard_timeout_01.json  medium_partial_tokenizer_regression_01.json  medium_tokenizer_01.json
server/: app.py
