[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inferops-env"
version = "0.1.0"
description = "A deterministic environment for debugging ML inference incidents."
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
